--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,9 @@ directsearch==1.0 ; python_version == "3.12"
 djlint==1.36.4 ; python_version == "3.12"
 ecdsa==0.19.1 ; python_version == "3.12"
 editorconfig==0.17.0 ; python_version == "3.12"
+eralchemy==1.5.0 ; python_version == "3.12"
+essentials-openapi==1.2.0 ; python_version == "3.12"
+essentials==1.1.6 ; python_version == "3.12"
 execnet==2.1.1 ; python_version == "3.12"
 executing==2.2.0 ; python_version == "3.12"
 fastapi==0.115.12 ; python_version == "3.12"
@@ -102,7 +105,7 @@ mkdocs-include-markdown-plugin==7.1.5 ; python_version == "3.12"
 mkdocs-jupyter==0.25.1 ; python_version == "3.12"
 mkdocs-macros-plugin==1.3.7 ; python_version == "3.12"
 mkdocs-material-extensions==1.3.1 ; python_version == "3.12"
-mkdocs-material==9.6.12 ; python_version == "3.12"
+mkdocs-material==9.6.14 ; python_version == "3.12"
 mkdocs==1.6.1 ; python_version == "3.12"
 mkdocstrings-python==1.16.10 ; python_version == "3.12"
 mkdocstrings==0.29.1 ; python_version == "3.12"
@@ -113,6 +116,7 @@ narwhals==1.38.2 ; python_version == "3.12"
 nbclient==0.10.2 ; python_version == "3.12"
 nbconvert==7.16.6 ; python_version == "3.12"
 nbformat==5.10.4 ; python_version == "3.12"
+neoteroi-mkdocs==1.1.2 ; python_version == "3.12"
 nest-asyncio==1.6.0 ; python_version == "3.12"
 nevergrad==1.0.12 ; python_version == "3.12"
 notebook-shim==0.2.4 ; python_version == "3.12"
@@ -145,6 +149,7 @@ pycparser==2.22 ; python_version == "3.12"
 pydantic-core==2.33.2 ; python_version == "3.12"
 pydantic==2.11.4 ; python_version == "3.12"
 pygments==2.19.1 ; python_version == "3.12"
+pygraphviz==1.14 ; python_version == "3.12"
 pymdown-extensions==10.15 ; python_version == "3.12"
 pymoo @ git+https://github.com/anyoptimization/pymoo@75de8f544fef2b45302c34b1035ac582663efe08 ; python_version == "3.12"
 pyomo==6.9.2 ; python_version == "3.12"
@@ -171,6 +176,7 @@ regex==2024.11.6 ; python_version == "3.12"
 requests==2.32.3 ; python_version == "3.12"
 rfc3339-validator==0.1.4 ; python_version == "3.12"
 rfc3986-validator==0.1.1 ; python_version == "3.12"
+rich==14.0.0 ; python_version == "3.12"
 rpds-py==0.24.0 ; python_version == "3.12"
 rsa==4.9.1 ; python_version == "3.12"
 ruff==0.11.8 ; python_version == "3.12"
