--- a/webui/package.json
+++ b/webui/package.json
@@ -42,7 +42,7 @@
 		"@tanstack/table-core": "^8.21.3",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
-		"@types/node": "^18",
+		"@types/node": "^18.19.112",
 		"@vitest/browser": "^3.1.4",
 		"@vitest/coverage-v8": "^3.1.4",
 		"bits-ui": "^2.1.0",
@@ -55,6 +55,7 @@
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"layerchart": "^2.0.0-next.10",
+		"mathlive": "^0.105.3",
 		"mdsvex": "^0.12.3",
 		"mode-watcher": "^1.0.7",
 		"openapi-typescript": "^7.8.0",
@@ -79,6 +80,9 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"openapi-fetch": "^0.14.0"
+		"@cortex-js/compute-engine": "^0.29.1",
+		"katex": "^0.16.22",
+		"openapi-fetch": "^0.14.0",
+		"openapi-typescript-fetch": "^2.2.0"
 	}
 }
