--- a/webui/components.json
+++ b/webui/components.json
@@ -6,6 +6,7 @@
 	},
 	"aliases": {
 		"components": "$lib/components",
+		"custom": "$lib/components/custom",
 		"utils": "$lib/utils",
 		"ui": "$lib/components/ui",
 		"hooks": "$lib/hooks",
