--- a/webui/package.json
+++ b/webui/package.json
@@ -42,6 +42,7 @@
 		"@tanstack/table-core": "^8.21.3",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/d3": "^7.4.3",
 		"@types/node": "^18.19.112",
 		"@vitest/browser": "^3.1.4",
 		"@vitest/coverage-v8": "^3.1.4",
@@ -81,6 +82,7 @@
 	},
 	"dependencies": {
 		"@cortex-js/compute-engine": "^0.29.1",
+		"d3": "^7.9.0",
 		"katex": "^0.16.22",
 		"openapi-fetch": "^0.14.0",
 		"openapi-typescript-fetch": "^2.2.0"
