--- a/pyproject.toml
+++ b/pyproject.toml
@@ -180,7 +180,7 @@ max-complexity = 15
 [tool.ruff.per-file-ignores]
 [tool.ruff.lint.per-file-ignores]
 # Ignore certain rules in test files
-"tests/**/*.py" = [
+"**/tests/**/*.py" = [
     "S101",    # asserts allowed in tests...
     "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
     "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
