--- a/.gitignore
+++ b/.gitignore
@@ -80,13 +80,15 @@ ipython_config.py
 #   intended to run in multiple environments; otherwise, check them in:
 # .python-version
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+# poetry and uv
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock and uv.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#   NOTE: We should have git ignore poetry.lock as we install different versions of polars.
+#   NOTE: We should have git ignore poetry.lock and uv.lock as we install different versions of polars.
+#   Change this in the future if necessary.
 poetry.lock
+uv.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
