--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "sympy >= 1.0",
     "pyparsing >= 3.0",
     "nevergrad >= 1.0.12",
-    "bayesian-optimization >= 1.0",  # They recently released v2 which breaks compatibility with nevergrad
+    "bayesian-optimization >= 1.0", # They recently released v2 which breaks compatibility with nevergrad
     "pyomo >= 6.8",
     "gurobipy >= 12.0.0",
     "tsp-solver >= 0.1",
@@ -34,7 +34,7 @@ dependencies = [
     "shap >= 0.47.0",
     "cvxpy[scip] >= 1.6.4",
     "moocore >= 0.1.7",
-    "marimo (>=0.14.13,<0.15.0)",
+    "marimo>=0.14.13,<0.15.0",
 ]
 
 [project.urls]
@@ -142,6 +142,9 @@ lint.pydocstyle.convention = "google"
 lint.fixable = []
 lint.unfixable = []
 
+# Allow unused variables when underscore-prefixed.
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
@@ -168,9 +171,6 @@ exclude = [
 ]
 
 line-length = 120
-
-# Allow unused variables when underscore-prefixed.
-lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Assume Python 3.12.
 target-version = "py312"
