--- a/webui/package.json
+++ b/webui/package.json
@@ -19,75 +19,75 @@
 		"build-storybook": "storybook build",
 		"generate:client": "openapi-typescript http://localhost:8000/openapi.json -o src/lib/api/client-types.ts",
 		"generate:zod-types": "openapi-zod-client http://localhost:8000/openapi.json -o src/lib/api/zod-types.ts"
-	},
-	"devDependencies": {
-		"@chromatic-com/storybook": "^3",
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@internationalized/date": "^3.8.1",
-		"@lucide/svelte": "^0.482.0",
-		"@playwright/test": "^1.49.1",
-		"@storybook/addon-essentials": "^8.6.14",
-		"@storybook/addon-svelte-csf": "^5.0.0-next.0",
-		"@storybook/blocks": "^8.6.14",
-		"@storybook/experimental-addon-test": "^8.6.14",
-		"@storybook/svelte": "^8.6.14",
-		"@storybook/sveltekit": "^8.6.14",
-		"@storybook/test": "^8.6.14",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.0",
-		"@tanstack/table-core": "^8.21.3",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/svelte": "^5.2.4",
-		"@types/d3": "^7.4.3",
-		"@types/node": "^18.19.112",
-		"@vitest/browser": "^3.1.4",
-		"@vitest/coverage-v8": "^3.1.4",
-		"bits-ui": "^2.1.0",
-		"clsx": "^2.1.1",
-		"embla-carousel-svelte": "^8.6.0",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
-		"formsnap": "^2.0.1",
-		"globals": "^16.0.0",
-		"jsdom": "^26.0.0",
-		"layerchart": "^2.0.0-next.10",
-		"mathlive": "^0.105.3",
-		"mdsvex": "^0.12.3",
-		"mode-watcher": "^1.0.7",
-		"openapi-typescript": "^7.8.0",
-		"openapi-zod-client": "^1.18.3",
-		"paneforge": "^1.0.0-next.5",
-		"playwright": "^1.52.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"storybook": "^8.6.14",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"svelte-sonner": "^1.0.3",
-		"sveltekit-superforms": "^2.25.0",
-		"tailwind-merge": "^3.3.0",
-		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^4.0.0",
-		"tw-animate-css": "^1.3.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vaul-svelte": "^1.0.0-next.7",
-		"vitest": "^3.0.0"
-	},
+		},
 	"dependencies": {
-		"@cortex-js/compute-engine": "^0.29.1",
-		"d3": "^7.9.0",
-		"echarts": "^6.0.0",
-		"katex": "^0.16.22",
-		"vite": "^6.2.6",
-		"openapi-fetch": "^0.14.0",
-		"openapi-typescript-fetch": "^2.2.0"
-	}
+	    "@cortex-js/compute-engine": "^0.29.1",
+	    "@tailwindcss/vite": "^4.0.0",
+	    "bits-ui": "^2.1.0",
+	    "d3": "^7.9.0",
+	    "echarts": "^6.0.0",
+	    "embla-carousel-svelte": "^8.6.0",
+	    "formsnap": "^2.0.1",
+	    "katex": "^0.16.22",
+	    "layerchart": "^2.0.0-next.10",
+	    "mathlive": "^0.105.3",
+	    "mode-watcher": "^1.0.7",
+	    "openapi-fetch": "^0.14.0",
+	    "openapi-typescript-fetch": "^2.2.0",
+	    "svelte": "^5.0.0",
+	    "svelte-sonner": "^1.0.3",
+	    "sveltekit-superforms": "^2.25.0",
+	    "tailwind-merge": "^3.3.0",
+	    "tailwind-variants": "^1.0.0",
+	    "tw-animate-css": "^1.3.0",
+	    "vaul-svelte": "^1.0.0-next.7",
+	    "vite": "^6.2.6"
+		},
+	"devDependencies": {
+	    "@chromatic-com/storybook": "^3",
+	    "@eslint/compat": "^1.2.5",
+	    "@eslint/js": "^9.18.0",
+	    "@internationalized/date": "^3.8.1",
+	    "@lucide/svelte": "^0.482.0",
+	    "@playwright/test": "^1.49.1",
+	    "@storybook/addon-essentials": "^8.6.14",
+	    "@storybook/addon-svelte-csf": "^5.0.0-next.0",
+	    "@storybook/blocks": "^8.6.14",
+	    "@storybook/experimental-addon-test": "^8.6.14",
+	    "@storybook/svelte": "^8.6.14",
+	    "@storybook/sveltekit": "^8.6.14",
+	    "@storybook/test": "^8.6.14",
+	    "@sveltejs/adapter-auto": "^6.0.0",
+	    "@sveltejs/kit": "^2.16.0",
+	    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+	    "@tailwindcss/forms": "^0.5.9",
+	    "@tailwindcss/typography": "^0.5.15",
+	    "@tanstack/table-core": "^8.21.3",
+	    "@testing-library/jest-dom": "^6.6.3",
+	    "@testing-library/svelte": "^5.2.4",
+	    "@types/d3": "^7.4.3",
+	    "@types/node": "^18.19.112",
+	    "@vitest/browser": "^3.1.4",
+	    "@vitest/coverage-v8": "^3.1.4",
+	    "clsx": "^2.1.1",
+	    "eslint": "^9.18.0",
+	    "eslint-config-prettier": "^10.0.1",
+	    "eslint-plugin-svelte": "^3.0.0",
+	    "globals": "^16.0.0",
+	    "jsdom": "^26.0.0",
+	    "mdsvex": "^0.12.3",
+	    "openapi-typescript": "^7.8.0",
+	    "openapi-zod-client": "^1.18.3",
+	    "paneforge": "^1.0.0-next.5",
+	    "playwright": "^1.52.0",
+	    "prettier": "^3.4.2",
+	    "prettier-plugin-svelte": "^3.3.3",
+	    "prettier-plugin-tailwindcss": "^0.6.11",
+	    "storybook": "^8.6.14",
+	    "svelte-check": "^4.0.0",
+	    "tailwindcss": "^4.0.0",
+	    "typescript": "^5.0.0",
+	    "typescript-eslint": "^8.20.0",
+	    "vitest": "^3.0.0"
+	  }
 }
