--- a/webui/package.json
+++ b/webui/package.json
@@ -36,7 +36,7 @@
 	    "openapi-typescript-fetch": "^2.2.0",
 	    "svelte": "^5.0.0",
 	    "svelte-sonner": "^1.0.3",
-		"sveltejs/adapter-node": "^5.3.1",
+		"@sveltejs/adapter-node": "^5.3.1",
 	    "sveltekit-superforms": "^2.25.0",
 		"@testing-library/svelte": "^5.2.4",
 	    "tailwind-merge": "^3.3.0",
