--- a/webui/package.json
+++ b/webui/package.json
@@ -12,7 +12,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
+		"test:unit": "vitest --config vitest.config.ts",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"test:e2e": "playwright test",
 		"storybook": "storybook dev -p 6006",
@@ -38,7 +38,6 @@
 	    "svelte-sonner": "^1.0.3",
 		"@sveltejs/adapter-node": "^5.3.1",
 	    "sveltekit-superforms": "^2.25.0",
-		"@testing-library/svelte": "^5.2.4",
 	    "tailwind-merge": "^3.3.0",
 	    "tailwind-variants": "^1.0.0",
 	    "tw-animate-css": "^1.3.0",
@@ -66,6 +65,7 @@
 	    "@tailwindcss/typography": "^0.5.15",
 	    "@tanstack/table-core": "^8.21.3",
 	    "@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^5.2.4",
 	    "@types/d3": "^7.4.3",
 	    "@types/node": "^18.19.112",
 	    "@vitest/browser": "^3.1.4",
