Now cookies might work

--- a/desdeo/api/config.toml
+++ b/desdeo/api/config.toml
@@ -51,6 +51,6 @@ db_pool = false
 # db_database = "test"
 # db_username = "test"
 # db_password = "testpw"
-# db_pool_size = 20
-# db_max_overflow = 20
-# db_pool = true
+db_pool_size = 20
+db_max_overflow = 20
+db_pool = true
