Config changes relating to running the desdeo on Rahti and some bugfixes (#348)
* UTOPIA branch

* pukki stuff

* Update package.json

* Update package.json

* Update svelte.config.js

* Update package.json

* Update package.json

* Update package.json

* Update assemble

* Separated testing from vite config

* Trying to get unnecessary dependencies out

* Try custom assemble script to maybe help with memory issues

* Let's see if this helps get the env set correctly

* Updated package lock

* Try updating the assemble script again

* See if there is anything in the folder

* again

* again

* again

* debugging

* added cors reading from env var

* Don't need that print

* whoops

* hupsis

* Now cookies might work

* Updating how calculation is handled in the ui

* Bugfix

* Log the error in the console, because we are not showing it.

* maybe it will update correctly now

* Let's try with svelte stores

* let's see if this works

* I feel like I have tried this before

* Maybe this works, who knows

* I guess the value of calculating wasn't updating before the nimbus call

* I think this might actually work

* God the button implementation is awful

* This should work, but does it?

* Don't need that

* Debug text

* Let's see what this does

* shit

* I guess we don't want to read the database info from env variables always

* Let's see if this does anything

* See what this does

* Everything is so fucked up it's pointless to even try

* bugfix

* Use objective names instead of symbols

* More symbols to names

* Actually, this needs a better fix

* Moved all the env variable reading to config.py

* Roll back nimbus svelte page

* Someone cannot name files properly

* Rename Topbar.svelte to topbar.svelte

* Changed the calculation order in stoms scalarizations to avoid division by 0, because of low numerical accuracy

* Updated documentation about hosting on kubernetes

---------

Co-authored-by: viljokass <vili.karkkainen@outlook.com>
Co-authored-by: Vili Kär

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ web = [
     "bcrypt>=4.3.0",
     "sqlalchemy-utils>=0.41.2",
     "sqlmodel>=0.0.24",
+    "psycopg2>=2.9.10",
     "websockets>=15.0.1"
 ]
 
