--- a/requirements.txt
+++ b/requirements.txt
@@ -150,6 +150,7 @@ pyasn1==0.6.1 ; python_version == "3.12"
 pycparser==2.22 ; python_version == "3.12"
 pydantic-core==2.33.2 ; python_version == "3.12"
 pydantic==2.11.7 ; python_version == "3.12"
+pydantic-settings==2.10.1 ; python_version == "3.12"
 pygments==2.19.2 ; python_version == "3.12"
 pymdown-extensions==10.16.1 ; python_version == "3.12"
 pymoo==0.6.1.5 ; python_version == "3.12"
