--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pyarrow >= 20.0.0",
     "numba >= 0.61.0",
     "pydantic >= 2.9",
+    "pydantic-settings >= 2.9",
     "sympy >= 1.0",
     "plotly>=6.0",
     "pyparsing >= 3.0",
