--- a/webui/tsconfig.json
+++ b/webui/tsconfig.json
@@ -10,7 +10,9 @@
 		"sourceMap": true,
 		"strict": true,
 		"moduleResolution": "bundler"
-	}
+	},
+	"include": ["src/**/*.ts", "src/**/*.svelte"],
+ 	"exclude": [".svelte-kit", "build", "dist", "node_modules"]
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
