--- a/pyproject.toml
+++ b/pyproject.toml
@@ -273,3 +273,6 @@ filterwarnings = [
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pyrefly]
+project-includes = ["desdeo/", "tests/"]
