Fix annoying TOC length issue

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
       - "desdeo-problem": "api/desdeo_problem.md"
       - "desdeo-mcdm": "api/desdeo_mcdm.md"
       - "desdeo-emo": "api/desdeo_emo.md"
+      - "DESDEO EMO Options": "api/EMO Options.md"
       - "desdeo-tools": "api/desdeo_tools.md"
       - "DESDEO REST API": "api/desdeo_api.md"
   - "Web-API":
@@ -132,6 +133,8 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.details
+  - toc:
+      toc_depth: 2
 
 extra_css:
   - stylesheets/extra.css
