--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,8 +44,8 @@ nav:
   - "Core-Logic Reference":
       - "desdeo-problem": "api/desdeo_problem.md"
       - "desdeo-mcdm": "api/desdeo_mcdm.md"
-      - "desdeo-emo": "api/desdeo_emo.md"
-      - "DESDEO EMO Options": "api/EMO Options.md"
+      - "EMO": "api/desdeo_emo.md"
+      - "EMO Pydantic Interface": "api/EMO Options.md"
       - "desdeo-tools": "api/desdeo_tools.md"
       - "DESDEO REST API": "api/desdeo_api.md"
   - "Web-API":
@@ -134,7 +134,7 @@ markdown_extensions:
       alternate_style: true
   - pymdownx.details
   - toc:
-      toc_depth: 2
+      toc_depth: 3
 
 extra_css:
   - stylesheets/extra.css
