--- a/webui/package.json
+++ b/webui/package.json
@@ -45,6 +45,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0",
+    "valibot": "^1.2.0",
     "vaul-svelte": "^1.0.0-next.7",
     "vite": "^7.1.9",
     "zod": "^4.1.12"
@@ -56,9 +57,11 @@
     "@internationalized/date": "^3.10.0",
     "@lucide/svelte": "^0.545.0",
     "@playwright/test": "^1.56.0",
-    "@storybook/addon-docs": "^9.1.10",
+    "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-svelte-csf": "^5.0.10",
-    "@storybook/sveltekit": "^9.1.10",
+    "@storybook/svelte": "^10.1.11",
+    "@storybook/svelte-vite": "^10.1.11",
+    "@storybook/sveltekit": "^10.1.11",
     "@sveltejs/adapter-auto": "^6.1.1",
     "@sveltejs/kit": "^2.46.4",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
@@ -74,7 +77,7 @@
     "clsx": "^2.1.1",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-storybook": "9.1.10",
+    "eslint-plugin-storybook": "^10.1.11",
     "eslint-plugin-svelte": "^3.12.4",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
@@ -85,7 +88,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "storybook": "^9.1.10",
+    "storybook": "^10.1.11",
     "svelte-check": "^4.3.3",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
