--- a/pyproject.toml
+++ b/pyproject.toml
@@ -262,7 +262,8 @@ markers = [
     "enautilus: tests related to the E-NAUTILUS method.",
     "gdmtools: tests related to group decision making.",
     "gnimbus: tests related to group nimbus method.",
-    "external: tests related to providers interfacing to external problems."
+    "external: tests related to providers interfacing to external problems.",
+    "fixme: tests that are not passing, but maybe should, yet are ignored."
 ]
 pythonpath = "."
 asyncio_default_fixture_loop_scope = "function"
