--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,21 @@
 [project]
 name = "desdeo"
-version = "2.1.0"
+version = "2.1.1"
 description = "DESDEO is a modular and open source framework for interactive multiobjective optimization."
 authors = [
-    {name="Giovanni Misitano",  email="giovanni.a.misitano@jyu.fi"},
-    {name="Bhupinder Saini", email="bhupinder.s.saini@jyu.fi"},
+    { name = "Giovanni Misitano", email = "giovanni.a.misitano@jyu.fi" },
+    { name = "Bhupinder Saini", email = "bhupinder.s.saini@jyu.fi" },
 ]
 license = "MIT"
 readme = "README.md"
-exclude = [
-    "tests",
-    "desdeo/api",
-    "desdeo/utopia_stuff"
+exclude = ["tests", "desdeo/api", "desdeo/utopia_stuff"]
+keywords = [
+    "optimization",
+    "decision-support",
+    "multiobjective optimization",
+    "evolutionary optimization",
+    "interactive methods",
 ]
-keywords=["optimization", "decision-support", "multiobjective optimization", "evolutionary optimization", "interactive methods"]
 requires-python = ">=3.12,<3.14"
 dependencies = [
     "numpy >= 2.2.0",
@@ -42,10 +44,10 @@ dependencies = [
 ]
 
 [project.urls]
-homepage="https://github.com/industrial-optimization-group/DESDEO"
-repository="https://github.com/industrial-optimization-group/DESDEO"
-documentation="https://desdeo.readthedocs.io/en/latest/"
-"Bug tracker"="https://github.com/industrial-optimization-group/DESDEO/issues"
+homepage = "https://github.com/industrial-optimization-group/DESDEO"
+repository = "https://github.com/industrial-optimization-group/DESDEO"
+documentation = "https://desdeo.readthedocs.io/en/latest/"
+"Bug tracker" = "https://github.com/industrial-optimization-group/DESDEO/issues"
 
 [dependency-groups]
 dev = [
@@ -71,11 +73,7 @@ docs = [
     "python-markdown-math>=0.9",
 ]
 
-jupyter = [
-    "jupyter>=1.0",
-    "jupyterlab>=4.0",
-    "jupytext>=1.16.4"
-]
+jupyter = ["jupyter>=1.0", "jupyterlab>=4.0", "jupytext>=1.16.4"]
 
 web = [
     "httpx>=0.28.1",
@@ -89,20 +87,13 @@ web = [
     "websockets>=15.0.1",
 ]
 
-viz = [
-    "seaborn>=0.13.0",
-    "scienceplots>=2.1.1",
-    "pyparsing[diagrams]>=3.1.1"
-]
+viz = ["seaborn>=0.13.0", "scienceplots>=2.1.1", "pyparsing[diagrams]>=3.1.1"]
 
-tools = [
-    "djlint>=1.34.1",
-    "eralchemy>=1.5.0"
-]
+tools = ["djlint>=1.34.1", "eralchemy>=1.5.0"]
 
 server = [ # production!
     "gunicorn>=23.0.0",
-    "psycopg2>=2.9.10"
+    "psycopg2>=2.9.10",
 ]
 
 all-dev = [
@@ -256,18 +247,12 @@ markers = [
     "gnimbus: tests related to group nimbus method.",
     "external: tests related to providers interfacing to external problems.",
     "fixme: tests that are not passing, but maybe should, yet are ignored.",
-    "githubskip: skip these tests on GitHub workflows."
+    "githubskip: skip these tests on GitHub workflows.",
 ]
 pythonpath = "."
 asyncio_default_fixture_loop_scope = "function"
-filterwarnings = [
-	"default::RuntimeWarning",
-	"default::UserWarning",
-]
-testpaths = [
-    "tests",
-    "desdeo/api/tests",
-]
+filterwarnings = ["default::RuntimeWarning", "default::UserWarning"]
+testpaths = ["tests", "desdeo/api/tests"]
 
 [build-system]
 requires = ["poetry-core"]
