Add missing docs to nav and remove plotly warning

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,11 +26,14 @@ nav:
       - "Solvers": "explanation/solvers.ipynb"
       - "Test problems": "explanation/test_problems.ipynb"
       - "Evolutionary algorithms": "explanation/templates_and_pub_sub.ipynb"
+      - "Pydantic interface": "explanation/pydantic_interface.md"
+      - "Group decision making and websockets": "explanation/group_decision_making_and_websockets.md"
       - "Web-API models and schema": "explanation/database_models_and_schema.md"
   - "Guides":
       - "": "howtoguides/index.md"
       - "How to install DESDEO": "howtoguides/installing.md"
       - "How to get started using DESDEO": "howtoguides/full_example.ipynb"
+      - "How to define multiobjective optimization problems": "howtoguides/problem.md"
       - "How to define a multiobjective optimization problem": "howtoguides/how_to_define_a_problem.ipynb"
       - "How to host a DESDEO web application on Kubernetes": "howtoguides/kubernetes.md"
       - "How to run DESDEO's web-API and web-GUI": "howtoguides/api_and_gui.md"
@@ -39,10 +42,15 @@ nav:
       - "How to use the NAUTILI method": "howtoguides/nautili.md"
       - "How to use the Pareto navigator method": "howtoguides/pareto_navigator.md"
       - "How to user evolutionary algorithms": "howtoguides/ea.ipynb"
+      - "How to configure evolutionary algorithms": "howtoguides/ea_options.ipynb"
+      - "How to implement evolutionary algorithms": "howtoguides/how_to_implement_ea.md"
       - "How to define problems with surrogates": "howtoguides/advancedSurrogates.ipynb"
+      - "How to use ADMS": "howtoguides/how_to_use_adms.ipynb"
+      - "How to use GDM score": "howtoguides/gdm_score.ipynb"
       - "How to generate a representative set of solutions": "howtoguides/IPR.ipynb"
   - "Core-Logic API Reference":
       - "": "api/index.md"
+      - "api": "api/desdeo_api.md"
       - "problem": "api/desdeo_problem.md"
       - "mcdm": "api/desdeo_mcdm.md"
       - "emo": "api/desdeo_emo.md"
