--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,8 @@ lint.select = [
 ]
 lint.ignore = [
     "COM812",  # Enforcing trailing commas is too annoying.
+    "FBT001",  # "boolean typed pos arg"
+    "FBT002",  # "boolean default pos"
     "PLR0911", # "too many return statements (>6)"
     "PLR0912", # "too many branches"
     "PLR0913", # "too many function args"
