--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,7 +5,7 @@
 version: 2
 
 mkdocs:
-  configuration: mkdocs.yml
+  configuration: mkdocs.rtd.yml
 
 # Set the version of Python and other tools you might need
 build:
